--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /CppSolutions/.vs/CppSolutions/v15/Browse.VC.opendb
+/Solutions/.vs/CppSolutions/v15/Browse.VC.opendb
